compiler-core/src/language_server/tests/snapshots/gleam_core__language_server__tests__completion__completions_for_imported_record_labels.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "\nimport dep\n  \nfn fun() { // completion inside parens below includes labels\n  let wibble = dep.Wibble()\n}\n"
---
import dep
  
fn fun() { // completion inside parens below includes labels
  let wibble = dep.Wibble()
}


----- Completion content -----
[
    CompletionItem {
        label: "dep.Wibble",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            Constructor,
        ),
        detail: Some(
            "fn(String, Int) -> Wibble",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 4,
                            character: 27,
                        },
                        end: Position {
                            line: 4,
                            character: 27,
                        },
                    },
                    new_text: "dep.Wibble",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "fun",
        label_details: Some(
            CompletionItemLabelDetails {
                detail: None,
                description: Some(
                    "app",
                ),
            },
        ),
        kind: Some(
            Function,
        ),
        detail: Some(
            "fn() -> Wibble",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: Some(
            Edit(
                TextEdit {
                    range: Range {
                        start: Position {
                            line: 4,
                            character: 27,
                        },
                        end: Position {
                            line: 4,
                            character: 27,
                        },
                    },
                    new_text: "fun",
                },
            ),
        ),
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wibble:",
        label_details: None,
        kind: Some(
            Field,
        ),
        detail: Some(
            "String",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
    CompletionItem {
        label: "wobble:",
        label_details: None,
        kind: Some(
            Field,
        ),
        detail: Some(
            "Int",
        ),
        documentation: None,
        deprecated: None,
        preselect: None,
        sort_text: None,
        filter_text: None,
        insert_text: None,
        insert_text_format: None,
        insert_text_mode: None,
        text_edit: None,
        additional_text_edits: None,
        command: None,
        commit_characters: None,
        data: None,
        tags: None,
    },
]
